loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:15: error: not found: value nbBaggles
if (nbBaggles >= 3) {
    ^Poucet1:19: error: not found: value nbBaggles
if (nbBaggles <= 2) {
    ^