loopdowhile.Poucet1.scala.code

do {
  
for (i<-0 to 4) {
  
 var nbBaggles:Int = 0;

if (estSurBiscuit==true) {
      nbBaggles=nbBaggles+1;
    }
    
    avance();
  }

if (nbBaggles >= 3) {
  gauche();
}
  
if (nbBaggles <= 2) {
  droite();
}
   
  
  
  
  
} while (sortieTrouvee==false)
  
avance();




